--- a/ColorfulBox/ColorfulBox/MainPage.xaml
+++ b/ColorfulBox/ColorfulBox/MainPage.xaml
@@ -138,7 +138,88 @@
                                              Maximum="360"
                                              Color="{Binding Color}"
                                              Value="{Binding Source={StaticResource HsvColorBridge},Path=H,Mode=TwoWay}"
-                                             ColorConverter="{StaticResource HueConverter}" />
+                                             ColorConverter="{StaticResource HueConverter}">
+                            <local:ColorGradient.Background>
+                                <LinearGradientBrush StartPoint="0,0.5"
+                                                     EndPoint="1,0.5">
+                                    <GradientStop Color="#FFFF0000"
+                                                  Offset="0" />
+                                    <GradientStop Color="#FFFF2A00"
+                                                  Offset="0.0277777777777778" />
+                                    <GradientStop Color="#FFFF5400"
+                                                  Offset="0.0555555555555556" />
+                                    <GradientStop Color="#FFFF7F00"
+                                                  Offset="0.0833333333333333" />
+                                    <GradientStop Color="#FFFFAA00"
+                                                  Offset="0.111111111111111" />
+                                    <GradientStop Color="#FFFFD400"
+                                                  Offset="0.138888888888889" />
+                                    <GradientStop Color="#FFFFFF00"
+                                                  Offset="0.166666666666667" />
+                                    <GradientStop Color="#FFD4FF00"
+                                                  Offset="0.194444444444444" />
+                                    <GradientStop Color="#FFAAFF00"
+                                                  Offset="0.222222222222222" />
+                                    <GradientStop Color="#FF7FFF00"
+                                                  Offset="0.25" />
+                                    <GradientStop Color="#FF54FF00"
+                                                  Offset="0.277777777777778" />
+                                    <GradientStop Color="#FF2AFF00"
+                                                  Offset="0.305555555555556" />
+                                    <GradientStop Color="#FF00FF00"
+                                                  Offset="0.333333333333333" />
+                                    <GradientStop Color="#FF00FF2A"
+                                                  Offset="0.361111111111111" />
+                                    <GradientStop Color="#FF00FF55"
+                                                  Offset="0.388888888888889" />
+                                    <GradientStop Color="#FF00FF7F"
+                                                  Offset="0.416666666666667" />
+                                    <GradientStop Color="#FF00FFA9"
+                                                  Offset="0.444444444444444" />
+                                    <GradientStop Color="#FF00FFD4"
+                                                  Offset="0.472222222222222" />
+                                    <GradientStop Color="#FF00FFFF"
+                                                  Offset="0.5" />
+                                    <GradientStop Color="#FF00D4FF"
+                                                  Offset="0.527777777777778" />
+                                    <GradientStop Color="#FF00A9FF"
+                                                  Offset="0.555555555555556" />
+                                    <GradientStop Color="#FF007FFF"
+                                                  Offset="0.583333333333333" />
+                                    <GradientStop Color="#FF0055FF"
+                                                  Offset="0.611111111111111" />
+                                    <GradientStop Color="#FF002AFF"
+                                                  Offset="0.638888888888889" />
+                                    <GradientStop Color="#FF0000FF"
+                                                  Offset="0.666666666666667" />
+                                    <GradientStop Color="#FF2A00FF"
+                                                  Offset="0.694444444444444" />
+                                    <GradientStop Color="#FF5400FF"
+                                                  Offset="0.722222222222222" />
+                                    <GradientStop Color="#FF7F00FF"
+                                                  Offset="0.75" />
+                                    <GradientStop Color="#FFAA00FF"
+                                                  Offset="0.777777777777778" />
+                                    <GradientStop Color="#FFD400FF"
+                                                  Offset="0.805555555555556" />
+                                    <GradientStop Color="#FFFF00FF"
+                                                  Offset="0.833333333333333" />
+                                    <GradientStop Color="#FFFF00D4"
+                                                  Offset="0.861111111111111" />
+                                    <GradientStop Color="#FFFF00AA"
+                                                  Offset="0.888888888888889" />
+                                    <GradientStop Color="#FFFF007F"
+                                                  Offset="0.916666666666667" />
+                                    <GradientStop Color="#FFFF0054"
+                                                  Offset="0.944444444444444" />
+                                    <GradientStop Color="#FFFF002A"
+                                                  Offset="0.972222222222222" />
+                                    <GradientStop Color="#FFFF0004"
+                                                  Offset="1" />
+
+                                </LinearGradientBrush>
+                            </local:ColorGradient.Background>
+                        </local:ColorGradient>
                         <!--<toolkit:NumericUpDown Value="{Binding Source={StaticResource ArgbColorBridge},Path=R,Mode=TwoWay}"
                                                        Maximum="255"
                                                        ValueBarVisibility="Collapsed"
