--- a/ColorfulBox/ColorfulBox/App.xaml
+++ b/ColorfulBox/ColorfulBox/App.xaml
@@ -2,9 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:ColorfulBox"
+             xmlns:localization="using:ColorfulBox.Localization"
              RequestedTheme="Dark">
     <Application.Resources>
         <local:ColorToBrushConverter x:Key="ColorToBrushConverter" />
+        <localization:ApplicationResources x:Key="R"/>
     </Application.Resources>
 
 </Application>
